[tool.poetry]
authors = ["Alex Vakhitov <alex@cloudkb.co.uk>"]
description = ""
name = "umesh"
version = "3.3.74"


[tool.poetry.dependencies]
arrow = "1.2.3"
Cerberus = "^1.3.4"
PyYAML = "^6.0"
anytree = "^2.8.0"
argon2-cffi = "^21.3.0"
channels = "^3.0.4"
django-filter = "21.1" # monkey-patched
django-import-export = "^2.7.1"
django-model-utils = "^4.2.0"
drf-jwt = "^1.19.2"
drfpasswordless = "^1.5.7"
freezegun = "^1.1.0"
jsonpath-ng = "^1.5.3"
paramiko = "^3.1.0"
postcode-validator-uk = "^1.0.0"
pyfcm = "^1.5.4"
pytest-asyncio = "^0.20.3"
python3-saml = "^1.13.0"
requests-aws4auth = "^1.1.1"
Django = "^4.2.3"
Pillow = "^10.0.0"
Pygments = "^2.14.0"
boto3 = "^1.26.76"
celery = "^5.3.1"
channels-redis = "^4.1.0"
cryptography = "^41.0.2"
dateparser = "^1.1.6"
django-admin-inline-paginator = "^0.4.0"
django-allauth = "^0.52.0"
django-anymail = "^9.0"
django-better-admin-arrayfield = "^1.4.2"
django-celery-beat = "2.5.0"
django-cors-headers = "^4.0.0"
django-crispy-forms = "^1.13.0"
django-easy-pdf = "^0.1.1"
django-environ = "^0.9.0"
django-health-check = "^3.16.5"
django-redis = "^5.2.0"
django-simple-history = "^3.0.0"
django-storages = {extras = ["boto3"], version = "^1.13.2"}
django-utils-six = "^2.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.2"
docutils = "0.19"
flower = "^2.0.0"
funcy = "^2.0"
glom = "^22.1.0"
graphene-django = "^3.0.0"
gunicorn = "^21.2.0"
hiredis = "^2.2.2"
httptools = "^0.5.0"
parse = "^1.19.0"
psycopg-c = "^3.1.9"
python = "^3.11"
python-dateutil = "^2.8.2"
python-slugify = "^7.0.0"
pytz = "^2023.3"
redis = "^4.5.5"
reportlab = "3.6.12"
requests-mock = "^1.10.0"
rfc3339-validator = "^0.1.4"
rope = "^1.7.0"
rule-engine = "^3.3.1"
sentry-sdk = "^1.25.1"
six = "^1.16.0"
twilio = "^7.16.0"
uvicorn = "^0.23.2"
uvloop = "^0.17.0"
websockets = "^11.0"
whitenoise = "^6.5.0"
xhtml2pdf = "^0.2.8"
xmltodict = "^0.13.0"
django-hosts = "5.2"
django-webpack-loader = "1.8.0"
django-strategy-field = "^2.1"
graphene-django-pagination = {git = "https://github.com/cloudkb/graphene-django-pagination.git", branch = "speed-up"}
graphene-django-filter = {git = "https://github.com/cloudkb/graphene-django-filter.git", rev = "graphene-django-v3"}
django-admin-rangefilter = "0.10.0"
graphene-file-upload = "^1.3.0"
django-resized = "^1.0.0"
django-sequences = "^2.7"
graphene-django-optimizer = "<0.9"
pyjson5 = "1.6.2"
celery-once = "^3.0.1"
lxml = "^4.9.2"
asgiref = "^3.7.2"
tzdata = "^2022.7"
strawberry-graphql = {extras = ["channels"], version = "^0.156.4"}
strawberry-graphql-django = "^0.9.2"
django-prometheus = "^2.3.1"
pyjwt = "^2.6.0"
authlib = "^1.2.0"
django-allow-cidr = "^0.6.0"
fcm-django = "^2.0.0"
firebase-admin = "^6.2.0"
natural-keys = "^2.1.0"
dotdict = "^0.1"
django-ace = "^1.23.4"
django-more-admin-filters = "^1.7"
tenacity = "^8.2.2"
anyascii = "^0.3.2"
django-extensions = "^3.2.3"
aws-requests-auth = "^0.4.3"
xmldiff = "^2.6.3"
django-cte = "^1.3.1"

[tool.poetry.dev-dependencies]
Sphinx = "^5.2.3"
Werkzeug = "^2.2.3"
beautifulsoup4 = "^4.10.0"
black = "^22.12"
boto3-stubs = "^1.26.50"
celery-stubs = "^0.1.2"
codecov = "^2.1.13"
coverage = "^7.2"
darglint = "^1.8.1"
django-coverage-plugin = "^2.0.2"
django-debug-toolbar = "^3.8.1"
django-stubs = "^1.15.0"
factory-boy = "^3.2.1"
flake8 = "^6.0.0"
flake8-annotations = "^3.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-blind-except = "^0.2.0"
flake8-bugbear = "23.3.12"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.2"
flake8-isort = "^6.0.0"
ipdb = "^0.13.13"
ipython = "^8.10.0"
localstack-client = "^1.39"
mypy = "^0.991"
nox = "^2022.1.7"
pre-commit = "^3.3.3"
pydot = "^1.4.2"
pylint = "^2.16.2"
pylint-celery = "^0.3"
pylint-django = "^2.4.4"
pytest = "^6.2.5"
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
pytest-env = "^0.6.2"
pytest-mock = "^3.6.1"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.5"
requests-mock = "^1.10.0"
safety = "^2.3.5"
sphinx-autobuild = "^2021.3.14"
sphinx-autodoc-typehints = "^1.12.0"
typeguard = "^2.13.3"
watchgod = "^0.8"
xdoctest = "^1.1.0"
bandit = "^1.7.4"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.coverage.paths]
source = ["apps", "*/site-packages"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.pytest.ini_options]
addopts = "--ds=config.settings.test --migrations"
django_find_project = true
env = [
  "DJANGO_SETTINGS_MODULE=config.settings.test",
]
filterwarnings = [
  # 3rd party modules haven’t yet sorted out the deprecation warnings
  'ignore:.*defines default_app_config.*',
  'ignore:SelectableGroups dict interface is deprecated\. Use select\.',
  'ignore:the load_module\(\) method is deprecated.*', # SoftDeletableModel provides both .all_objects and .available_objects.
  'ignore:.*received a naive datetime.*',
  # Plain .objects is currently (django-model-utils 4.2.0) the latter but will become the former.
  # It’s important to use one or the other explicitly.
  'error:.*\.objects model manager will include soft-deleted objects in an upcoming release.*',
]
